// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceDetails Offline Renders the component 1`] = `
<fragment-stub>
  <div class="d-flex pa-0 align-center">
    <h1>
      Device Details
    </h1>
  </div>
  <v-card-stub loaderheight="4" tag="div" class="mt-2">
    <v-toolbar-stub color="transparent" tag="header" extensionheight="48" flat="true" src="">
      <v-toolbar-title-stub>
        <v-tooltip-stub opendelay="0" closedelay="0" bottom="true" fixed="true" openonhover="true" contentclass="" maxwidth="auto" nudgebottom="0" nudgeleft="0" nudgeright="0" nudgetop="0" nudgewidth="0" tag="span"> <span>active a year ago</span></v-tooltip-stub>
        39-5e-2a
      </v-toolbar-title-stub>
      <devicerename-stub name="39-5e-2a" uid="a582b47a" data-test="deviceRename-component"></devicerename-stub>
      <v-spacer-stub></v-spacer-stub>
      <!---->
      <devicedelete-stub uid="a582b47a" redirect="true" data-test="deviceDelete-component"></devicedelete-stub>
    </v-toolbar-stub>
    <v-divider-stub></v-divider-stub>
    <v-card-text-stub>
      <div class="mt-2">
        <div class="overline">
          UID
        </div>
        <div data-test="deviceUid-field">
          a582b47a
        </div>
      </div>
      <div class="mt-2">
        <div class="overline">
          MAC
        </div> <code data-test="deviceMac-field">
          00:00:00
        </code>
      </div>
      <div class="mt-2">
        <v-combobox-stub errorcount="1" errormessages="" messages="" rules="[Function]" successmessages="" value="device1,device2" appendicon="" backgroundcolor="" hint="Maximum of 5 tags" id="targetInput" label="Tag" loaderheight="2" clearicon="$clear" type="text" valuecomparator="[Function]" nodatatext="$vuetify.noDataText" chips="true" deletablechips="true" items="" itemcolor="primary" itemdisabled="disabled" itemtext="text" itemvalue="value" menuprops="[object Object]" multiple="true" returnobject="true" allowoverflow="true" filter="[Function]" delimiters="" data-test="deviceTag-field"></v-combobox-stub>
      </div>
      <div class="mt-2">
        <div class="overline">
          Operating System
        </div>
        <div data-test="devicePrettyName-field">
          <deviceicon-stub iconname="arch"></deviceicon-stub>
          Linux
        </div>
      </div>
      <div class="mt-2">
        <div class="overline">
          Last Seen
        </div>
        <div data-test="deviceConvertDate-field">
          Wednesday, May 20th 2020, 6:58:53 pm
        </div>
      </div>
    </v-card-text-stub>
  </v-card-stub>
  <div class="text-center">
    <v-dialog-stub opendelay="0" closedelay="0" contentclass="" maxwidth="none" origin="center center" persistent="true" retainfocus="true" transition="dialog-transition" width="500">
      <v-card-stub loaderheight="4" tag="div">
        <v-card-title-stub primarytitle="" primary-title="" class="headline grey lighten-2">
          Device ID error
        </v-card-title-stub>
        <v-card-text-stub class="mt-4 mb-3 pb-1">
          You tried to access a non-existing device ID.
        </v-card-text-stub>
        <v-card-actions-stub>
          <v-spacer-stub></v-spacer-stub>
          <v-btn-stub color="primary" tag="button" activeclass="" text="true" type="button">
            Go back to devices
          </v-btn-stub>
        </v-card-actions-stub>
      </v-card-stub>
    </v-dialog-stub>
  </div>
</fragment-stub>
`;

exports[`DeviceDetails Online Renders the component 1`] = `
<fragment-stub>
  <div class="d-flex pa-0 align-center">
    <h1>
      Device Details
    </h1>
  </div>
  <v-card-stub loaderheight="4" tag="div" class="mt-2">
    <v-toolbar-stub color="transparent" tag="header" extensionheight="48" flat="true" src="">
      <v-toolbar-title-stub>
        <v-icon-stub color="success">
          check_circle
        </v-icon-stub>
        39-5e-2a
      </v-toolbar-title-stub>
      <devicerename-stub name="39-5e-2a" uid="a582b47a" data-test="deviceRename-component"></devicerename-stub>
      <v-spacer-stub></v-spacer-stub>
      <terminaldialog-stub uid="a582b47a" data-test="terminalDialog-component"></terminaldialog-stub>
      <devicedelete-stub uid="a582b47a" redirect="true" data-test="deviceDelete-component"></devicedelete-stub>
    </v-toolbar-stub>
    <v-divider-stub></v-divider-stub>
    <v-card-text-stub>
      <div class="mt-2">
        <div class="overline">
          UID
        </div>
        <div data-test="deviceUid-field">
          a582b47a
        </div>
      </div>
      <div class="mt-2">
        <div class="overline">
          MAC
        </div> <code data-test="deviceMac-field">
          00:00:00
        </code>
      </div>
      <div class="mt-2">
        <v-combobox-stub errorcount="1" errormessages="" messages="" rules="[Function]" successmessages="" value="device1,device2" appendicon="" backgroundcolor="" hint="Maximum of 5 tags" id="targetInput" label="Tag" loaderheight="2" clearicon="$clear" type="text" valuecomparator="[Function]" nodatatext="$vuetify.noDataText" chips="true" deletablechips="true" items="" itemcolor="primary" itemdisabled="disabled" itemtext="text" itemvalue="value" menuprops="[object Object]" multiple="true" returnobject="true" allowoverflow="true" filter="[Function]" delimiters="" data-test="deviceTag-field"></v-combobox-stub>
      </div>
      <div class="mt-2">
        <div class="overline">
          Operating System
        </div>
        <div data-test="devicePrettyName-field">
          <deviceicon-stub iconname="arch"></deviceicon-stub>
          Linux
        </div>
      </div>
      <div class="mt-2">
        <div class="overline">
          Last Seen
        </div>
        <div data-test="deviceConvertDate-field">
          Wednesday, May 20th 2020, 6:58:53 pm
        </div>
      </div>
    </v-card-text-stub>
  </v-card-stub>
  <div class="text-center">
    <v-dialog-stub opendelay="0" closedelay="0" contentclass="" maxwidth="none" origin="center center" persistent="true" retainfocus="true" transition="dialog-transition" width="500">
      <v-card-stub loaderheight="4" tag="div">
        <v-card-title-stub primarytitle="" primary-title="" class="headline grey lighten-2">
          Device ID error
        </v-card-title-stub>
        <v-card-text-stub class="mt-4 mb-3 pb-1">
          You tried to access a non-existing device ID.
        </v-card-text-stub>
        <v-card-actions-stub>
          <v-spacer-stub></v-spacer-stub>
          <v-btn-stub color="primary" tag="button" activeclass="" text="true" type="button">
            Go back to devices
          </v-btn-stub>
        </v-card-actions-stub>
      </v-card-stub>
    </v-dialog-stub>
  </div>
</fragment-stub>
`;
